--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     <p>2025-08-01：はじめての公開！</p>
   </main>
 
+  <main>
+  <h2>今日のひとこと</h2>
+  <p>2025-08-01：はじめて自分のサイトを世界に公開！</p>
+
+  <h2>2025-08-01</h2>
+  <p>こうして自分で実験的にサイトを作っていると考えると感慨深い</p>
+　</main>
+
   <footer>
     <p>© 2025 Kobayashi</p>
   </footer>
