--- a/index.html
+++ b/index.html
@@ -1,34 +1,13 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>小林の人生航海日誌</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <h1>小林の人生航海日誌</h1>
-    <nav>
-      <a href="#">ホーム</a> | <a href="#">日記</a> | <a href="#">プロフィール</a>
-    </nav>
-  </header>
-
-  <main>
-    <h2>今日のひとこと</h2>
-    <p>2025-08-01：はじめての公開！</p>
-  </main>
-
-  <main>
-  <h2>今日のひとこと</h2>
-  <p>2025-08-01：はじめて自分のサイトを世界に公開！</p>
-
-  <h2>2025-08-01</h2>
-  <p>こうして自分で実験的にサイトを作っていると考えると感慨深い</p>
-　</main>
-
-  <footer>
-    <p>© 2025 Kobayashi</p>
-  </footer>
-</body>
-</html>
+<header>
+  <h1>小林大資｜思考と実践の航海記</h1>
+  <nav>
+    <ul>
+      <li><a href="profile.html">プロフィール</a></li>
+      <li><a href="projects.html">プロジェクトマップ</a></li>
+      <li><a href="board.html">掲示板</a></li>
+      <li><a href="diary.html">日記</a></li>
+      <li><a href="books.html">書物</a></li>
+      <li><a href="tools.html">シェア資料</a></li>
+    </ul>
+  </nav>
+</header>
