--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
-<header>
-  <h1>小林大資｜思考と実践の航海記</h1>
-  <nav>
-    <ul>
-      <li><a href="profile.html">プロフィール</a></li>
-      <li><a href="projects.html">プロジェクトマップ</a></li>
-      <li><a href="board.html">掲示板</a></li>
-      <li><a href="diary.html">日記</a></li>
-      <li><a href="books.html">書物</a></li>
-      <li><a href="tools.html">シェア資料</a></li>
-    </ul>
-  </nav>
-</header>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>小林大資｜ポータルサイト</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>小林大資｜思考と実践の航海記</h1>
+    <nav>
+      <ul>
+        <li><a href="profile.html">プロフィール</a></li>
+        <li><a href="#">プロジェクトマップ</a></li>
+        <li><a href="#">掲示板</a></li>
+        <li><a href="#">日記</a></li>
+        <li><a href="#">書物</a></li>
+        <li><a href="#">シェア資料</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Welcome</h2>
+      <p>このページは、小林大資の思想・日記・プロジェクト・ツールなどを集約した個人ポータルです。</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 小林大資</p>
+  </footer>
+</body>
+</html>
