--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <body>
   <header>
     <h1>小林大資｜思考と実践の航海記</h1>
-    <nav>
-      <ul>
-        <li><a href="profile.html">プロフィール</a></li>
-        <li><a href="#">プロジェクトマップ</a></li>
-        <li><a href="#">掲示板</a></li>
-        <li><a href="#">日記</a></li>
-        <li><a href="#">書物</a></li>
-        <li><a href="#">シェア資料</a></li>
-      </ul>
-    </nav>
+   <nav>
+  <ul>
+    <li><a href="profile.html">プロフィール</a></li>
+    <li><a href="projects.html">プロジェクトマップ</a></li>
+    <li><a href="board.html">掲示板</a></li>
+    <li><a href="diary.html">日記</a></li>
+    <li><a href="books.html">書物</a></li>
+    <li><a href="tools.html">シェア資料</a></li>
+  </ul>
+</nav>
+
   </header>
 
   <main>
