--- a/tools.html
+++ b/tools.html
@@ -37,7 +37,27 @@
 
     <section>
       <h2>アップロードされた資料（Coming Soon）</h2>
-      <p>📂 現在アップされているファイルはありません。</p>
+      <p>📂<section>
+  <h2>📊 人生設計テンプレート（Googleスプレッドシート）</h2>
+
+  <div class="step" onclick="toggleStep(this)">
+    <h3>🔎 このツールの目的・使い方</h3>
+    <div class="step-content">
+      <p>
+        価値観から逆算して、人生の目標や必要な収入、行動・計画を整理できるスプレッドシートです。<br>
+        「何のために何をするか」を明確にしたい人に最適です。ぜひコピーしてご活用ください。
+      </p>
+    </div>
+  </div>
+
+  <p style="margin-top: 1rem;">
+    👉 <a href="https://docs.google.com/spreadsheets/d/18e9hzcJEOJ3Yimy6G4HWq4tzufG9o5BXzsDPRrKlCFE/edit?usp=drivesdk"
+          target="_blank"
+          style="color: #3c40c6; font-weight: bold;">📥 スプレッドシートを開く</a>
+  </p>
+</section>
+
+      </p>
       <p>※ 公開時には、ここにダウンロードリンクや使い方ガイドを表示します。</p>
     </section>
   </main>
