--- a/tools.html
+++ b/tools.html
@@ -36,9 +36,9 @@
     </section>
 
     <section>
-      <h2>アップロードされた資料（Coming Soon）</h2>
+      <h2>アップロードされた資料</h2>
       <p>📂<section>
-  <h2>📊 人生設計テンプレート（Googleスプレッドシート）</h2>
+  <h2>📊 人生設計テンプレート（）</h2>
 
   <div class="step" onclick="toggleStep(this)">
     <h3>🔎 このツールの目的・使い方</h3>
@@ -51,7 +51,7 @@
   </div>
 
   <p style="margin-top: 1rem;">
-    👉 <a href="https://docs.google.com/spreadsheets/d/18e9hzcJEOJ3Yimy6G4HWq4tzufG9o5BXzsDPRrKlCFE/edit?usp=drivesdk"
+    👉 <a href="(ここに入力)"
           target="_blank"
           style="color: #3c40c6; font-weight: bold;">📥 スプレッドシートを開く</a>
   </p>
