--- a/profile.html
+++ b/profile.html
@@ -24,6 +24,14 @@
       <p>
         1998年生まれ。愛知県出身。  
         「人生を設計する」「価値を言語化する」ことを軸に、多角的な自己探究と他者支援を実践中。
+        自身の人生を通して「変われなかった自分」を乗り越え、その経験を再現性のある支援へと昇華しようと努力を続けている人物。
+        もともと努力が苦手だという意識を持っていた過去を持つが、ある時、「本当の人生を歩みたい」という切実な気持ちに向き合い始めたことがきっかけに
+        行動・思考・環境を根本的に見直す、人生の再設計を始動する。
+        現在は、人生計画支援を軸に、AI、認知科学、登録系ツール(MLM、サロン、アプリ)という3つの領域を融合した独自の支援モデルを構築中。
+        特に「人は情報では変化しない。本能だけが人を変える。」という思想を基盤に、すべての人の目標達成や、幸福に寄り添う。
+        その思考は、「目的→手段→行動→結果」という逆算プロセスを重視し、顧客の自己変革や、ブレイクスルーを構造から支援する。
+        単なる商品販売や、営業を捨て、【自己変革と信頼のビジネス】としてとらえなおし、将来的には、個人の内面から社会構造までを変えていけるような
+        大きな仕組みづくりを目指している。これが小林大資という人間の核にあるビジョンである。
       </p>
     </section>
 
