--- a/tools.html
+++ b/tools.html
@@ -54,6 +54,13 @@
     👉 <a href="(ここに入力)"
           target="_blank"
           style="color: #3c40c6; font-weight: bold;">📥 スプレッドシートを開く</a>
+    
+<div class="tool-item">
+  <h3>🔍 WANT診断ミニゲーム</h3>
+  <p>あなたの「本質的なWANT（在り方）」を診断しよう。4タイプから、自分の軸を発見！</p>
+  <a href="want-diagnosis.html" class="tool-link">▶ 診断をはじめる</a>
+</div> 
+        
   </p>
 </section>
 
