--- a/books.html
+++ b/books.html
@@ -5,6 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>書物｜小林大資</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .tool-link {
+      display: inline-block;
+      margin-top: 0.5rem;
+      padding: 0.5rem 1rem;
+      background-color: #6c5ce7; /* 紫 */
+      color: #fff;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: background-color 0.3s;
+    }
+
+    .tool-link:hover {
+      background-color: #4a4ae0;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -36,8 +52,9 @@
         <li>終章：自由とは何か──人生と在り方の統合</li>
       </ol>
 
-      <h3>📖 試し読み（準備中）</h3>
-      <p>※現在、試し読み用PDFや一部抜粋テキストを整備中です。</p>
+      <h3>📘 真の自分への旅（書籍）</h3>
+      <p>小林大資による初の本。価値観、在り方、人生設計を深く掘り下げた一冊。</p>
+      <a href="真の自分への旅.pdf" class="tool-link" target="_blank">▶ PDFで読む</a>
     </section>
 
     <section>
