--- a/books.html
+++ b/books.html
@@ -54,7 +54,8 @@
 
       <h3>📘 真の自分への旅（書籍）</h3>
       <p>小林大資による初の本。価値観、在り方、人生設計を深く掘り下げた一冊。</p>
-      <a href=" https://kosamedaisuke.github.io/my-diary/true_self_journey.pdf" class="tool-link" target="_blank">▶ PDFで読む</a>
+      <a href="https://kosamedaisuke.github.io/my-diary/true_self_journey.pdf" class="tool-link" target="_blank" style="display:inline-block;padding:10px 20px;background:#6c5ce7;color:#fff;border-radius:8px;text-decoration:none;">📘 PDFで読む</a>
+
     </section>
 
     <section>
