--- a/tools.html
+++ b/tools.html
@@ -60,6 +60,10 @@
   <p>あなたの「本質的なWANT（在り方）」を診断しよう。4タイプから、自分の軸を発見！</p>
   <a href="want-diagnosis.html" class="tool-link">▶ 診断をはじめる</a>
 </div> 
+
+        <li><a href="kobayashi-quiz.html">▶ 小林大資クイズに挑戦！</a></li>
+        
+
         
   </p>
 </section>
